@@ -1,6 +1,7 @@
 v1.5:
 * i8n
 * Added heartbeat option
+* Expanded checksumming options
 
 v1.4: January 6th 2019
 * Fixed crash with checksumming enabled
